--- a/Task.html
+++ b/Task.html
@@ -23,7 +23,7 @@
             Nizami  Biryani                           Panneer Biryani                           Vegetable Biryani                             Chicken Dum Biryani
 </pre></b> 
 <br>
-<img src="./images/krutunga.jpg" width="100%">
+<img src="./images/Krutunga.jpg" width="100%">
 <br>
 <h3>Available Food Items</h3>
 <section>
