--- a/HTM,CSS Practice/Programs/Task1.html
+++ b/HTM,CSS Practice/Programs/Task1.html
@@ -39,7 +39,7 @@
     </head>
     <body>
        <center><h1>Mahendra Singh Dhoni</h1></center>
-        <img src="../images/MS_Doni.jpg" align="right">
+        <img src="../images/MS_Doni.jpg" align="right" width="300">
         <b>
         <pre>
             Mahendra Singh Dhoni ( born 7 July 1981) is an Indian professional cricketer who plays as a right handed batter
