--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+       <title>Inline,Block Elements</title>
+       <style>
+        .Ele1{
+            display: inline-block;
+            background-color: white;
+            margin-left: 40px;
+            margin-bottom: 20px;
+            margin-top: 60px;
+            padding: 10px;
+            border: 2px solid black;
+            width: 200px;
+        }
+        .element{
+            display: block;
+            background-color: grey;
+            padding: 10px;
+            font-size: 100px;
+            text-align: center;
+            margin-left: 140px;
+        }
+       </style>
+    </head>
+    <body>
+       <div class="element">
+        <div class="Ele1">1</div>
+        <div  class="Ele1">2</div>
+        <div  class="Ele1">3</div>
+        <div  class="Ele1">4</div>
+        <div  class="Ele1">5</div>
+       </div>
+       <div class="element">
+        <div  class="Ele1">1</div>
+        <div  class="Ele1">2</div>
+        <div  class="Ele1">3</div>
+        <div  class="Ele1">4</div>
+        <div  class="Ele1">5</div>
+       </div>
+       <div class="element">
+        <div  class="Ele1">1</div>
+        <div  class="Ele1">2</div>
+        <div  class="Ele1">3</div>
+        <div  class="Ele1">4</div>
+        <div  class="Ele1">5</div>
+       </div>
+       <div class="element">
+        <div  class="Ele1">1</div>
+        <div  class="Ele1">2</div>
+        <div  class="Ele1">3</div>
+        <div  class="Ele1">4</div>
+        <div  class="Ele1">5</div>
+       </div>
+       <div class="element">
+        <div  class="Ele1">1</div>
+        <div  class="Ele1">2</div>
+        <div  class="Ele1">3</div>
+        <div  class="Ele1">4</div>
+        <div  class="Ele1">5</div>
+       </div>
+    </body>
+</html>
